feat: #38 테스트 코드 구현